crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_recursive__nested_live_capture.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_recursive.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
letrec
  outer#1 : int -> int [static []] = \x#3 : int -> x#3
in
letrec
  inner#2 : int -> int [static []] = \y#4 : int -> outer#1 y#4
in
inner#2 42
--- core after
letrec
  outer#1 : int -> int [static []] = \x#3 : int -> x#3
in
letrec
  inner#2 : int -> int [static []] = \y#4 : int -> outer#1 y#4
in
inner#2 42
--- uplc before
(program 1.1.0
  [(lam outer_1
    [(lam inner_2 [inner_2 (con integer 42)])
      [(lam self_5 [self_5 self_5]) (lam self_5 (lam y_4 [outer_1 y_4]))]])
    [(lam self_7 [self_7 self_7]) (lam self_7 (lam x_3 x_3))]])
--- uplc after
(program 1.1.0
  [(lam outer_1
    [(lam inner_2 [inner_2 (con integer 42)])
      [(lam self_9 [self_9 self_9]) (lam self_9 (lam y_4 [outer_1 y_4]))]])
    [(lam self_11 [self_11 self_11]) (lam self_11 (lam x_3 x_3))]])
--- result
(con integer 42)
--- logs
[]
